[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [
  {name = "t1user", email = "enterdragon@duck.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Investment",
  "Licence :: OSI Approved :: BSD Licence",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "arctic @ git+https://github.com/man-group/arctic.git",
  "ib_insync",
  "pandas",
  "pandas-market-calendars",
  "numba",
  "pyyaml",
]
description = 'Framework for trading with Interactive Brokers through ib_insync'
dynamic = ["version"]
keywords = ["ib_insync", "tws", "ibgateway", "asyncio", "interactive brokers", "algo trading"]
name = "haymaker"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
all = ["haymaker[notebook,dev]"]
dev = [
  "types-pyyaml",
  "pandas-stubs",
  "isort",
  "mypy",
  "autopep8",
  "yapf",
  "black",
  "flake8",
  "pytest",
  "pytest-asyncio",
  "sphinx",
  "sphinx-autodoc-typehints",
  "furo",
]
notebook = [
  "jupyter",
  "matplotlib",
  "pyfolio-reloaded",
]

[tool.setuptools]
packages = ["haymaker"]

[project.urls]
Repository = "https://github.com/t1user/haymaker"

[project.scripts]
dataloader = "haymaker.dataloader.dataloader:start"

[tool.setuptools_scm]
version_file = "haymaker/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
# check_untyped_defs = true

# remove this after fixing backtester
[[tool.mypy.overrides]]
ignore_errors = true
module = "backtester"

[tool.pytest.ini_options]
addopts = ["-p", "no:warnings"]
