[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
authors = [
  {name = "t1user", email = "enterdragon@duck.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Investment",
  "Licence :: OSI Approved :: BSD Licence",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "arctic @ git+https://github.com/man-group/arctic.git@3cf2a9ce3a7f2c2544ececd20d0f4f5b917f7b2a",
  "ib_insync==0.9.86",
  "pandas==2.3.3",
  "pandas-market-calendars==5.1.1",
  "numpy==2.3.4",
  "numba==0.65.0",
  "pyyaml==6.0.3",
  "tqdm==4.67.1",
  "types-tqdm==4.67.0.20250809",
]
description = 'Framework for trading with Interactive Brokers through ib_insync'
dynamic = ["version"]
keywords = ["ib_insync", "tws", "ibgateway", "asyncio", "interactive brokers", "algo trading"]
name = "haymaker"
readme = "README.md"
requires-python = ">= 3.11, <3.13"

[project.optional-dependencies]
docs = [
  "sphinx==8.2.3",
  "sphinx-autodoc-typehints==3.5.2",
  "sphinx-argparse==0.5.2",
  "furo==2025.9.25",
]

dev = [
  "haymaker[docs]", 
  "types-pyyaml==6.0.3",
  "pandas-stubs==2.3.2.250926",
  "isort==7.0.0",
  "mypy==1.18.2",
  "black==26.3.1",
  "flake8==7.3.0",
  "pytest<9",
  "pytest-asyncio==1.3.0",
  "mongomock==4.3.0",
  "pyfolio-reloaded==0.9.9",
]

notebook = [
  "jupyter==1.1.1",
  "matplotlib==3.10.7",
  "pyfolio-reloaded==0.9.9",
  "arch==8.0.0",
  "hmmlearn==0.3.3",
]

dashboard = [
  "streamlit",
]

all = ["haymaker[dev,notebook,dashboard]"]

[tool.setuptools.packages.find]
include = ["haymaker*", "dashboard*"]

[project.urls]
Repository = "https://github.com/t1user/haymaker"

[project.scripts]
dataloader = "haymaker.dataloader.dataloader:start"
haymaker-dashboard = "dashboard.cli:main"

[tool.setuptools_scm]
version_file = "haymaker/_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
disable_error_code = ["return"]
# check_untyped_defs = true

# remove this after fixing backtester
[[tool.mypy.overrides]]
ignore_errors = true
module = "backtester"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["streamlit", "streamlit.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["arch.bootstrap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-p", "no:warnings"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "standard"
