[metadata]
name = ib_tools
version = 0.1.0

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[options]
# package_dir=
#     =src
packages = find:
# zip_safe = True
# include_package_data = True
install_requires =
    arctic
    pandas
    numpy
    ib_insync


# [options.packages.find]
# where=src

# [options.entry_points]
# console_scripts = 
#    my-example-utility = example.example_module:main

[options.extras_require]
notebook = jupyter, matplotlib
dev =
    isort
    black
    flake8
    pandas-stubs
