[metadata]
name = ib_tools
version = 0.1.0
author = t1user
url = 'https://github.com/t1user/ib_tools'
description = Framework for trading with Interactive Brokers through ib_insync
keywords = 'ib_insync tws ib gateway asyncio interactive brokers'
classifiers =
            Programming Language :: Python :: 3

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[options]
# package_dir=
#     =src

packages = find:
package_data={'ib_tools': ['py.typed']}
include_package_data = True

install_requires =
    arctic
    pandas
    numpy
    ib_insync


# [options.packages.find]
# where=src

# [options.entry_points]
# console_scripts = 
#    my-example-utility = example.example_module:main

[options.extras_require]
notebook =
         jupyter
         matplotlib
dev =
    isort
    black
    flake8
    pandas-stubs
