[metadata]
name = ib_tools
version = 0.1.0
author = t1user
url = 'https://github.com/t1user/ib_tools'
license = 'BSD'
description = 'Framework for trading with Interactive Brokers through ib_insync'
keywords = 'ib_insync tws ib gateway asyncio interactive brokers'
classifiers =
            Programming Language :: Python :: 3

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[options]
# package_dir=
#     =src

packages = find:
python_requires = >=3.8
include_package_data = True

install_requires =
    arctic @ git+https://github.com/man-group/arctic.git
    pandas<2.0
    ib_insync

[options.package_data]
ib_tools = py.typed

[options.packages.find]
# where=src
exclude =
        scripts
        
# [options.entry_points]
# console_scripts = 
#    my-example-utility = example.example_module:main

[options.extras_require]
notebook =
         jupyter
         matplotlib
dev =
    isort
    black
    flake8
    pytest
    pytest-asyncio
